Update file paths for CSS and JS in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Login System</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="UI-Session/css/style.css">
 </head>
 <body>
 
@@ -20,6 +20,7 @@
   <p id="message"></p>
 </div>
 
-<script src="/js/app.js"></script>
+<script src="UI-Session/js/app.js"></script>
 </body>
+
 </html>
