--- a/UI-Session/html/dashboard.html
+++ b/UI-Session/html/dashboard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Dashboard</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="UI-Session/css/style.css">
 </head>
 <body>
 
@@ -24,4 +24,5 @@
 </script>
 
 </body>
+
 </html>
